2011-06-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-stop-animations): New function to stop any
	animations going on at article exit time.

	* gnus-registry.el (gnus-registry-user-format-function-M): Reinstate,
	since removing it breaks people upgrading.

	* shr.el (shr-put-image): Use the new interface for animating images.
	(shr-put-image): Animate for 60 seconds.

	* auth-source.el (with-auth-source-epa-overrides): Fix compilation
	error with `find-file-hooks' on Emacs 22.
	(with-auth-source-epa-overrides): Ugly hack to Wrap the
	`find-file-hook' things in `symbol-value' to avoid compilation warnings
	on all architectures.

	* spam.el (spam-stat): Require in a normal fashion without binding
	`spam-stat-install-hooks' to avoid compilation warnings.

	* spam-stat.el (spam-stat-install-hooks): Removed.
	(spam-stat-install-hooks): Don't run automatically.

2011-06-26  Timo Juhani Lindfors  <timo.lindfors@iki.fi>  (tiny change)

	* gnus-msg.el (gnus-summary-reply-to-list-with-original): New command
	and keystroke.

2011-06-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* auth-source.el (auth-source-netrc-cache): Move forward.

2011-06-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* auth-source.el (auth-source-netrc-create): Don't query the bits that
	we already know.
	(auth-source-forget-all-cached): Clear auth-source-netrc-cache, too.
	(auth-source-netrc-create): Don't prompt for the stuff we already know.

2011-06-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* auth-source.el (auth-source-netrc-create): Don't print all tokens in
	%S format, since that looks odd.
	(auth-sources): Prefer the ~/.authinfo file over the ~/.authinfo.gpg
	file, especially when saving.

2011-06-21  Andrew Cohen  <cohen@andy.bu.edu>

	* nnimap.el (nnimap-find-article-by-message-id): return nil when no
	article found.

2011-06-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-netrc-use-gpg-tokens): Replace