@@ -2655,8 +2655,12 @@ such as a mark that says whether an article is stored in the cache
 (defvar gnus-have-read-active-file nil)
 
 (defconst gnus-maintainer
-  "bugs@gnus.org (The Gnus Bugfixing Girls + Boys)"
+  "submit@debbugs.gnu.org (The Gnus Bugfixing Girls + Boys)"
   "The mail address of the Gnus maintainers.")
+
+(defconst gnus-bug-package
+  "gnus"
+  "The package to use in the bug submission.")
 
 (defvar gnus-info-nodes
   '((gnus-group-mode "(gnus)Group Buffer")
